--- a/package.json
+++ b/package.json
@@ -7,9 +7,18 @@
   "scripts": {
     "build": "npx tsc",
     "start": "npm run build && node dist/server.js",
+    "start:dev": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1",
     "seed": "node dist/seeds/index.js"
   },
+"nodemonConfig": {
+    "watch": [
+      "src"
+    ],
+    "ext": "ts,json,js",
+    "exec": "npx tsc && node dist/server.js"
+  },
+
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -20,6 +29,8 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/mongoose": "^5.11.96",
-    "typescript": "^5.5.4"
+    "@types/node": "^22.10.6",
+    "typescript": "^5.5.4",
+     "nodemon": "^3.1.9"
   }
 }
